--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.155 2004-02-14 16:10:34 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.156 2004-02-14 18:37:04 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.0, xx January 2004}
+\date{Version 1.2.0, xx February 2004}
 
 \maketitle
 
@@ -585,8 +585,7 @@ replace bitmap images. They just offer an alternative when high quality
 change the scale, the labels or the colors in a bitmap picture long after
 the picture was produced, and without altering its quality?) are important.
 \item
-Transparency is not supported yet, though we plan to support it eventually
-for PDF output. See the \dd{TODO} file for a more detailed discussion.
+Transparency is only supported for PDF output.
 \item
 GL2PS does not support textures, fog effects, etc.
 \end{itemize}
@@ -751,7 +750,7 @@ does not seem to be available anymore).
   (binary files, fonts).
 \item[1.1.2] (Nov 16, 2003) Fixed various compiler warnings (mostly for
   Windows Visual C++).
-\item[1.2.0] (Jan xx, 2004) New transparency support for PDF output; fixed
+\item[1.2.0] (Feb xx, 2004) New transparency support for PDF output; fixed
  more compiler warnings (for Windows Borland C++).
 \end{description}
 
