more pretty print

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.157 2004-03-06 02:32:34 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.158 2004-03-06 04:05:12 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -751,8 +751,8 @@ does not seem to be available anymore).
   (binary files, fonts).
 \item[1.1.2] (Nov 16, 2003) Fixed various compiler warnings (mostly for
   Windows Visual C++).
-\item[1.2.0] (Mar xx, 2004) New transparency support for PDF output; fix bug
-  for empty feedback buffer but non-empty primitive list; fixed more
+\item[1.2.0] (Mar xx, 2004) New transparency support for PDF output; fixed
+  bug for empty feedback buffer but non-empty primitive list; fixed more
   compiler warnings.
 \end{description}
 
