--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.160 2004-03-09 23:38:42 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.161 2004-03-15 18:53:41 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -234,6 +234,12 @@ determine the way primitives are handled:
   to take effect you need to compile GL2PS with \dd{HAVE_ZLIB},
   \dd{HAVE_LIBZ} or \dd{GL2PS_HAVE_ZLIB} defined, and link the executable
   with the zlib library (\url{http://www.gzip.org/zlib/}).
+
+  A word of caution: PostScript files generated with this option turned on
+  are simply compressed ``as a whole'', i.e., they are identical to regular
+  files compressed with \dd{gzip}--and may thus not be readable by standard
+  PostScript interpreters. This is not the case for compressed PDF files,
+  for which the compression is part of the official specification.
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
