update e-mail for Quy Nguyen-Dai and JF

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.167 2004-03-17 17:25:51 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.168 2004-03-21 20:35:19 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -644,12 +644,12 @@ culling hints;
 \email{Marc Um{\'e}}{marc.ume@digitalgraphics.be} for the original list
 code;
 %
-\email{Jean-Fran\c{c}ois Remacle}{remacle@scorec.rpi.edu} for plane equation
+\email{Jean-Fran\c{c}ois Remacle}{remacle@gce.ucl.ac.be} for plane equation
 fixes; 
 %
 \email{Bart Kaptein}{B.L.Kaptein@lumc.nl} for memory leak fixes;
 %
-\email{Quy Nguyen-Dai}{quy@vnilux.com} for output file size optimization;
+\email{Quy Nguyen-Dai}{quy@nguyendai.org} for output file size optimization;
 %
 \email{Sam Buss}{sbuss@ucsd.edu} for the \dd{shfill}-based smooth shaded
 triangle code;
