--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.170 2004-05-09 18:06:01 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.171 2004-05-14 02:36:33 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.0, 10 May 2004}
+\date{Version 1.2.0, 13 May 2004}
 
 \maketitle
 
@@ -769,9 +769,9 @@ does not seem to be available anymore).
   (binary files, fonts).
 \item[1.1.2] (Nov 16, 2003) Fixed various compiler warnings (mostly
   for Windows Visual C++).
-\item[1.2.0] (May 10, 2004) New transparency support for PDF output;
-  fixed bug for empty feedback buffer but non-empty primitive list;
-  fixed more compiler warnings and cleaned up the code (mostly to
+\item[1.2.0] (May 13, 2004) New (experimental...) transparency support for
+  PDF output; fixed bug for empty feedback buffer but non-empty primitive
+  list; fixed more compiler warnings and cleaned up the code (mostly to
   reduce the global namespace pollution).
 \end{description}
 
