--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.171 2004-05-14 02:36:33 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.172 2004-05-14 07:56:03 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -244,10 +244,10 @@ determine the way primitives are handled:
   A word of caution: PostScript files generated with this option turned on
   are simply compressed ``as a whole'', i.e., they are identical to regular
   files compressed with the gzip program--and may thus not be readable
-  directly by all PostScript interpreters. This is not the case for
-  compressed PDF files (the compression is done ``locally'' for each group
-  of primitives in the output stream, in accordance to the official PDF
-  specification), which should thus be as portable as uncompressed ones.
+  directly by all PostScript interpreters. There is no such problem with PDF
+  files: the compression is done ``locally'' for each group of primitives in
+  the output stream, in accordance to the official PDF specification, and
+  compressed PDF files should thus be as portable as non-compressed ones.
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
