--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.173 2004-07-11 22:30:25 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.174 2004-07-13 15:59:49 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -572,7 +572,7 @@ while( state == GL2PS_OVERFLOW ){
                    GL2PS_SIMPLE_LINE_OFFSET | GL2PS_NO_BLENDING |
                    GL2PS_OCCLUSION_CULL | GL2PS_BEST_ROOT,
                    GL_RGBA, 0, NULL, 0, 0, 0, buffsize,
-                   fp, NULL );
+                   fp, "MyFileName" );
   draw(); 
   state = gl2psEndPage();
 }
