*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.174 2004-07-13 15:59:49 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.175 2004-07-13 16:03:45 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -692,7 +692,7 @@ shaded triangle code and the \dd{shfill} management;
 %
 \email{Shahzad Muzaffar}{Shahzad.Muzaffar@cern.ch} and \email{Lassi
 Tuura}{lassi.tuura@cern.ch} for the new occlusion culling code, the
-improvement of \dd{GL2PS_BEST_ROOT} and the image map support;
+improvement of \dd{GL2PS_BEST_ROOT} and the imagemap support;
 %
 \email{Guy Barrand}{barrand@lal.in2p3.fr} for his work on
 \dd{gl2psDrawPixels} and the new viewport management;
@@ -798,9 +798,10 @@ does not seem to be available anymore).
   PDF output; fixed bug for empty feedback buffer but non-empty primitive
   list; fixed more compiler warnings and cleaned up the code (mostly to
   reduce the global namespace pollution).
-\item[1.2.1] (Jul xx, 2004) New image map support for PostScript output; new
+\item[1.2.1] (Jul xx, 2004) New imagemap support for PostScript output; new
  text alignment support for PostScript and LaTeX output; new support for
- rotated text for LaTeX output.
+ rotated text for LaTeX output; fixed NULL check on input strings in
+ \dd{gl2psBeginPage}.
 \end{description}
 
 \end{document}
