--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.175 2004-07-13 16:03:45 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.176 2004-07-13 16:32:01 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.1, xx July 2004}
+\date{Version 1.2.1, 13 July 2004}
 
 \maketitle
 
@@ -798,7 +798,7 @@ does not seem to be available anymore).
   PDF output; fixed bug for empty feedback buffer but non-empty primitive
   list; fixed more compiler warnings and cleaned up the code (mostly to
   reduce the global namespace pollution).
-\item[1.2.1] (Jul xx, 2004) New imagemap support for PostScript output; new
+\item[1.2.1] (Jul 13, 2004) New imagemap support for PostScript output; new
  text alignment support for PostScript and LaTeX output; new support for
  rotated text for LaTeX output; fixed NULL check on input strings in
  \dd{gl2psBeginPage}.
