call gl2psDrawPixels before glDrawPixels (fixes the bug with the new Linux X.org+NVidia servers)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.176 2004-07-13 16:32:01 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.177 2004-08-31 21:17:15 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -802,6 +802,7 @@ does not seem to be available anymore).
  text alignment support for PostScript and LaTeX output; new support for
  rotated text for LaTeX output; fixed NULL check on input strings in
  \dd{gl2psBeginPage}.
+\item[1.2.2] (???) Fixed a couple of small bugs in the example code.
 \end{description}
 
 \end{document}
