--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.177 2004-08-31 21:17:15 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.178 2004-09-21 21:48:31 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,20 +58,16 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.1, 13 July 2004}
+\date{Version 1.2.2, 21 September 2004}
 
 \maketitle
 
 %%tth: \section*{Download}
-%%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.1.tar.gz}{tar.gz}
-%%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.1.zip}{zip}
-%%tth: archive. These archives contain both a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
-%%tth: and a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}{PDF}
-%%tth: version of the documentation. Older versions are still
+%%tth: The current distribution of GL2PS is
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.2.tgz}{gl2ps-1.2.2.tgz}.
+%%tth: This distribution contains a complete
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}
+%%tth: {documentation in PDF format}. Older versions are still
 %%tth: available \href{http://www.geuz.org/gl2ps/src/}{here}.
 %%tth: \par
 %%tth: For questions and discussions about GL2PS features, 
@@ -802,7 +798,8 @@ does not seem to be available anymore).
  text alignment support for PostScript and LaTeX output; new support for
  rotated text for LaTeX output; fixed NULL check on input strings in
  \dd{gl2psBeginPage}.
-\item[1.2.2] (???) Fixed a couple of small bugs in the example code.
+\item[1.2.2] (Sep 21, 2004) Fixed a couple of small bugs in the example
+  code.
 \end{description}
 
 \end{document}
