patch from Guy Barrand to fix nbit=2 and nbit=4 cases in gl2psPrintPostScriptPixmap (these cases are not used by default)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.178 2004-09-21 21:48:31 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.179 2004-11-15 00:01:49 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -58,13 +58,13 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.2.2, 21 September 2004}
+\date{Version 1.2.3, xx November 2004}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.2.tgz}{gl2ps-1.2.2.tgz}.
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.2.3.tgz}{gl2ps-1.2.3.tgz}.
 %%tth: This distribution contains a complete
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}
 %%tth: {documentation in PDF format}. Older versions are still
@@ -799,6 +799,8 @@ does not seem to be available anymore).
  rotated text for LaTeX output; fixed NULL check on input strings in
  \dd{gl2psBeginPage}.
 \item[1.2.2] (Sep 21, 2004) Fixed a couple of small bugs in the example
+  code.
+\item[1.2.3] (Nov xx, 2004) Fixed small bugs in (unused) PostScript pixmap
   code.
 \end{description}
 
