Use the min/max of the z-buffer to compute the precision (gl2ps->epsilon) and the line offsets, instead of relying on magic numbers.
This solves the dependency of the simple line offsets on the values of the
min and max clipping planes (in the projection matrix).

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.179 2004-11-15 00:01:49 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.180 2004-11-22 06:46:48 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2004 Christophe Geuzaine <geuz@geuz.org>
@@ -801,7 +801,7 @@ does not seem to be available anymore).
 \item[1.2.2] (Sep 21, 2004) Fixed a couple of small bugs in the example
   code.
 \item[1.2.3] (Nov xx, 2004) Fixed small bugs in (unused) PostScript pixmap
-  code.
+  code; better computation of \dd{GL2PS_SIMPLE_LINE_OFFSET}.
 \end{description}
 
 \end{document}
